# myfpga

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  README.md  implement_design.py  minisat_driver.py  myfpga.sublime-project  pathfinder.py  pnr_vis_test.py  requirements.txt  sim_annealing_test.py  z3_tests.py
designs/fibonacci/: Makefile  fibonacci.v  fibonacci.ys
designs/my_design/: .gitignore  Makefile  my_design.v  my_design.ys
designs/test/: Makefile  lut_generator.py  minisat_driver.py  my_design.v  my_design.ys  myfpga_toolchain.py  simulator_test.py
hdl/: CMakeLists.txt  logic_cell.sv  lut.sv  mux8.sv  myfpga.sv  myfpga.svh  shift_register8.sv  slice.sv  switch_block.sv
minisat_interface/: CMakeLists.txt  main.cpp
simulator/: CMakeLists.txt  main.cpp
toolchain/: requirements.txt  setup.py
toolchain/.cargo/: config
toolchain/myfpga/: __main__.py  implementation.py  pathfinder.py  routing.py  simulation.py  synthesis.py
toolchain/myfpga/templates/: svgtest.html
toolchain/pnr/: main.cpp
toolchain/toolchain/: Cargo.toml
toolchain/toolchain/src/: anneal.rs  bitstream.rs  implementation.rs  main.rs  pathfinder.rs  routing.rs  synthesis.rs
toolchain/toolchain/src/routing/: anneal.rs  mod.rs  pathfinder.rs  topology.rs
toolchain_py/: .gitignore  requirements.txt
toolchain_py/myfpga/: __main__.py  implementation.py  pathfinder.py  routing.py  synthesis.py
